k8s1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-web
  namespace: static
spec:
  selector:
    app: static-web
  type: ClusterIP
  ports:
  - name: static-web
    protocol: TCP
    port: 80
    targetPort: 80
