k8s1/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-Ingress
  namespace: default
spec:
  rules:
  - host: www.static.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: static-web
            port:
              number: 80
